--- a/public/web/2021/css/style-rtl-v-1-4.css
+++ b/public/web/2021/css/style-rtl-v-1-4.css
@@ -828,7 +828,7 @@ ol {
 
 .news-item {
 	overflow: hidden;
-	margin-bottom: 30px;
+	margin-bottom: 5px;
 }
 
 .news-item.left-news .ni-pic {
@@ -937,9 +937,8 @@ ol {
 .points-table table thead tr th {
 	font-size: 14px;
 	color: #ffffff;
-	font-weight: 500;
+	font-weight: 300;
 	background: #2c2d2f;
-	padding: 14px 0 13px;
 }
 
 .points-table table thead tr th.th-o {
@@ -960,7 +959,7 @@ ol {
 	text-align: center;
 	font-size: 14px;
 	color: #636363;
-	padding: 12px 0;
+	padding: 5px 0;
 }
 
 .points-table table tbody tr td.team-name {
@@ -984,14 +983,14 @@ ol {
 
 .points-table .p-all {
 	font-size: 14px;
-	color: #000000;
+	color: #ffffff;
 	text-transform: uppercase;
-	font-weight: 500;
+	font-weight: 300;
 	letter-spacing: 1px;
-	background: #f2f2f2;
+	background: #17a2b8;
 	display: block;
 	text-align: center;
-	padding: 15px;
+	padding: 5px;
 }
 
 /*---------------------
