--- a/public/web/2021/css/app.css
+++ b/public/web/2021/css/app.css
@@ -20471,3 +20471,9 @@ img {
 
     }
 }
+
+@media only screen and (max-width: 991px){
+    .padding-top-index {
+        padding-top: 115px;
+    }
+}
